samples/_failures_safe/1761076036_dc149a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37e3b773.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_37e3b773.c:146:17: error: expected identifier at end of input
  146 |                 int v = graph->edges[i].
      |                 ^~~
./samples/SAFE/__tmp_37e3b773.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37e3b773.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37e3b773.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37e3b773.c:146:17: error: expected declaration or statement at end of input
